fixed button overlap on list

--- a/public/styles.css
+++ b/public/styles.css
@@ -60,7 +60,7 @@
     vertical-align: middle;
 }
 
-.dropdown{
+.dropdown-menu{
     z-index: 99;
 }
 
